name:                pandoc-tangle
version:             0.1.0.0
synopsis:            Tangling with Pandoc
license:             NCSA
build-type:          Simple
cabal-version:       >=1.10

executable pandoc-tangle
    hs-source-dirs:     src
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base , pandoc , pandoc-types , containers
    default-language:   Haskell2010
