name:                pandoc-tangle
version:             0.1.0.0
synopsis:            Tangling with Pandoc
license:             NCSA
build-type:          Simple
cabal-version:       >=1.10

executable pandoc-tangle
    hs-source-dirs:     src
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base , containers , optparse-applicative , split
                      , pandoc < 1.20 && >= 1.17 , pandoc-types
    default-language:   Haskell2010
